--- a/react-frontend/src/output.css
+++ b/react-frontend/src/output.css
@@ -8,9 +8,10 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-400: oklch(70.4% 0.191 22.216);
-    --color-yellow-600: oklch(68.1% 0.162 75.834);
-    --color-emerald-300: oklch(84.5% 0.143 164.978);
+    --color-cyan-800: oklch(45% 0.085 224.283);
     --spacing: 0.25rem;
+    --text-xs: 0.75rem;
+    --text-xs--line-height: calc(1 / 0.75);
     --text-3xl: 1.875rem;
     --text-3xl--line-height: calc(2.25 / 1.875);
     --text-6xl: 3.75rem;
@@ -246,6 +247,15 @@
   .w-6\/10 {
     width: calc(6/10 * 100%);
   }
+  .w-7 {
+    width: calc(var(--spacing) * 7);
+  }
+  .w-7\/10 {
+    width: calc(7/10 * 100%);
+  }
+  .w-8\/10 {
+    width: calc(8/10 * 100%);
+  }
   .w-9\/10 {
     width: calc(9/10 * 100%);
   }
@@ -323,6 +333,15 @@
   .items-center {
     align-items: center;
   }
+  .items-end {
+    align-items: flex-end;
+  }
+  .justify-around {
+    justify-content: space-around;
+  }
+  .justify-between {
+    justify-content: space-between;
+  }
   .justify-center {
     justify-content: center;
   }
@@ -356,8 +375,11 @@
   .bg-\[\#f6ebdc\] {
     background-color: #f6ebdc;
   }
-  .fill-yellow-600 {
-    fill: var(--color-yellow-600);
+  .bg-cyan-800\/75 {
+    background-color: color-mix(in srgb, oklch(45% 0.085 224.283) 75%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-cyan-800) 75%, transparent);
+    }
   }
   .object-cover {
     object-fit: cover;
@@ -406,6 +428,10 @@
     font-size: var(--text-6xl);
     line-height: var(--tw-leading, var(--text-6xl--line-height));
   }
+  .text-xs {
+    font-size: var(--text-xs);
+    line-height: var(--tw-leading, var(--text-xs--line-height));
+  }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
@@ -429,9 +455,6 @@
   }
   .text-\[\#d94355\] {
     color: #d94355;
-  }
-  .text-yellow-600 {
-    color: var(--color-yellow-600);
   }
   .line-through {
     text-decoration-line: line-through;
@@ -509,16 +532,6 @@
     &:hover {
       @media (hover: hover) {
         cursor: pointer;
-      }
-    }
-  }
-  .hover\:bg-emerald-300\/60 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: color-mix(in srgb, oklch(84.5% 0.143 164.978) 60%, transparent);
-        @supports (color: color-mix(in lab, red, red)) {
-          background-color: color-mix(in oklab, var(--color-emerald-300) 60%, transparent);
-        }
       }
     }
   }
