--- a/react-frontend/src/output.css
+++ b/react-frontend/src/output.css
@@ -7,10 +7,7 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-amber-400: oklch(82.8% 0.189 84.429);
-    --color-yellow-50: oklch(98.7% 0.026 102.212);
-    --color-yellow-100: oklch(97.3% 0.071 103.193);
-    --color-yellow-400: oklch(85.2% 0.199 91.936);
+    --color-amber-300: oklch(87.9% 0.169 91.605);
     --color-green-400: oklch(79.2% 0.209 151.711);
     --color-black: #000;
     --spacing: 0.25rem;
@@ -287,9 +284,6 @@
   .min-h-screen {
     min-height: 100vh;
   }
-  .w-1\/4 {
-    width: calc(1/4 * 100%);
-  }
   .w-2\/10 {
     width: calc(2/10 * 100%);
   }
@@ -311,18 +305,6 @@
   .w-full {
     width: 100%;
   }
-  .max-w-1\/3 {
-    max-width: calc(1/3 * 100%);
-  }
-  .max-w-1\/4 {
-    max-width: calc(1/4 * 100%);
-  }
-  .max-w-1\/5 {
-    max-width: calc(1/5 * 100%);
-  }
-  .max-w-7\/10 {
-    max-width: calc(7/10 * 100%);
-  }
   .max-w-md {
     max-width: var(--container-md);
   }
@@ -331,9 +313,6 @@
   }
   .min-w-300 {
     min-width: calc(var(--spacing) * 300);
-  }
-  .min-w-md {
-    min-width: var(--container-md);
   }
   .flex-1\/3 {
     flex: calc(1/3 * 100%);
@@ -395,6 +374,12 @@
   .items-center {
     align-items: center;
   }
+  .items-start {
+    align-items: flex-start;
+  }
+  .items-stretch {
+    align-items: stretch;
+  }
   .justify-center {
     justify-content: center;
   }
@@ -438,8 +423,8 @@
   .border-accent-lm {
     border-color: var(--color-accent-lm);
   }
-  .bg-amber-400 {
-    background-color: var(--color-amber-400);
+  .bg-amber-300 {
+    background-color: var(--color-amber-300);
   }
   .bg-bg-lm {
     background-color: var(--color-bg-lm);
@@ -456,15 +441,6 @@
   .bg-modal-input-bg {
     background-color: var(--color-modal-input-bg);
   }
-  .bg-yellow-50 {
-    background-color: var(--color-yellow-50);
-  }
-  .bg-yellow-100 {
-    background-color: var(--color-yellow-100);
-  }
-  .bg-yellow-400 {
-    background-color: var(--color-yellow-400);
-  }
   .object-cover {
     object-fit: cover;
   }
@@ -474,9 +450,6 @@
   .p-5 {
     padding: calc(var(--spacing) * 5);
   }
-  .p-8 {
-    padding: calc(var(--spacing) * 8);
-  }
   .p-10 {
     padding: calc(var(--spacing) * 10);
   }
@@ -485,9 +458,6 @@
   }
   .pt-5 {
     padding-top: calc(var(--spacing) * 5);
-  }
-  .pt-7 {
-    padding-top: calc(var(--spacing) * 7);
   }
   .pt-10 {
     padding-top: calc(var(--spacing) * 10);
@@ -614,6 +584,10 @@
     --tw-duration: 500ms;
     transition-duration: 500ms;
   }
+  .duration-1000 {
+    --tw-duration: 1000ms;
+    transition-duration: 1000ms;
+  }
   .ease-in {
     --tw-ease: var(--ease-in);
     transition-timing-function: var(--ease-in);
@@ -646,16 +620,6 @@
         --tw-scale-x: 95%;
         --tw-scale-y: 95%;
         --tw-scale-z: 95%;
-        scale: var(--tw-scale-x) var(--tw-scale-y);
-      }
-    }
-  }
-  .hover\:scale-100 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-scale-x: 100%;
-        --tw-scale-y: 100%;
-        --tw-scale-z: 100%;
         scale: var(--tw-scale-x) var(--tw-scale-y);
       }
     }
