--- a/react-frontend/src/output.css
+++ b/react-frontend/src/output.css
@@ -7,8 +7,6 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-orange-900: oklch(40.8% 0.123 38.172);
-    --color-cyan-900: oklch(39.8% 0.07 227.392);
     --color-black: #000;
     --spacing: 0.25rem;
     --container-md: 28rem;
@@ -250,9 +248,6 @@
   .flex {
     display: flex;
   }
-  .h-2\/10 {
-    height: calc(2/10 * 100%);
-  }
   .h-3\/4 {
     height: calc(3/4 * 100%);
   }
@@ -262,14 +257,8 @@
   .h-8 {
     height: calc(var(--spacing) * 8);
   }
-  .h-8\/10 {
-    height: calc(8/10 * 100%);
-  }
   .h-9 {
     height: calc(var(--spacing) * 9);
-  }
-  .h-10\/10 {
-    height: calc(10/10 * 100%);
   }
   .h-15 {
     height: calc(var(--spacing) * 15);
@@ -304,9 +293,6 @@
   .min-h-screen {
     min-height: 100vh;
   }
-  .w-2\/10 {
-    width: calc(2/10 * 100%);
-  }
   .w-6 {
     width: calc(var(--spacing) * 6);
   }
@@ -327,9 +313,6 @@
   }
   .w-15 {
     width: calc(var(--spacing) * 15);
-  }
-  .w-20 {
-    width: calc(var(--spacing) * 20);
   }
   .w-full {
     width: 100%;
@@ -467,23 +450,14 @@
       background-color: color-mix(in oklab, var(--color-black) 50%, transparent);
     }
   }
-  .bg-cyan-900 {
-    background-color: var(--color-cyan-900);
-  }
   .bg-modal-input-bg {
     background-color: var(--color-modal-input-bg);
-  }
-  .bg-orange-900 {
-    background-color: var(--color-orange-900);
   }
   .object-cover {
     object-fit: cover;
   }
   .p-3 {
     padding: calc(var(--spacing) * 3);
-  }
-  .p-5 {
-    padding: calc(var(--spacing) * 5);
   }
   .pt-2 {
     padding-top: calc(var(--spacing) * 2);
@@ -624,6 +598,14 @@
   .duration-500 {
     --tw-duration: 500ms;
     transition-duration: 500ms;
+  }
+  .duration-600 {
+    --tw-duration: 600ms;
+    transition-duration: 600ms;
+  }
+  .duration-1000 {
+    --tw-duration: 1000ms;
+    transition-duration: 1000ms;
   }
   .ease-in {
     --tw-ease: var(--ease-in);
