--- a/react-frontend/src/output.css
+++ b/react-frontend/src/output.css
@@ -257,9 +257,6 @@
   .h-8 {
     height: calc(var(--spacing) * 8);
   }
-  .h-9 {
-    height: calc(var(--spacing) * 9);
-  }
   .h-15 {
     height: calc(var(--spacing) * 15);
   }
@@ -305,9 +302,6 @@
   .w-8\/10 {
     width: calc(8/10 * 100%);
   }
-  .w-9 {
-    width: calc(var(--spacing) * 9);
-  }
   .w-9\/10 {
     width: calc(9/10 * 100%);
   }
@@ -319,9 +313,6 @@
   }
   .max-w-md {
     max-width: var(--container-md);
-  }
-  .min-w-15 {
-    min-width: calc(var(--spacing) * 15);
   }
   .min-w-300 {
     min-width: calc(var(--spacing) * 300);
@@ -459,6 +450,9 @@
   .p-3 {
     padding: calc(var(--spacing) * 3);
   }
+  .p-4 {
+    padding: calc(var(--spacing) * 4);
+  }
   .pt-2 {
     padding-top: calc(var(--spacing) * 2);
   }
@@ -586,25 +580,9 @@
     --tw-duration: 300ms;
     transition-duration: 300ms;
   }
-  .duration-400 {
-    --tw-duration: 400ms;
-    transition-duration: 400ms;
-  }
   .duration-500 {
     --tw-duration: 500ms;
     transition-duration: 500ms;
-  }
-  .duration-600 {
-    --tw-duration: 600ms;
-    transition-duration: 600ms;
-  }
-  .duration-700 {
-    --tw-duration: 700ms;
-    transition-duration: 700ms;
-  }
-  .duration-1000 {
-    --tw-duration: 1000ms;
-    transition-duration: 1000ms;
   }
   .ease-in {
     --tw-ease: var(--ease-in);
