another implementation of todo app with proper animations, but acts weirdly

--- a/react-frontend/src/output.css
+++ b/react-frontend/src/output.css
@@ -7,6 +7,7 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-orange-700: oklch(55.3% 0.195 38.402);
     --color-black: #000;
     --spacing: 0.25rem;
     --container-md: 28rem;
@@ -191,6 +192,9 @@
   .pointer-events-none {
     pointer-events: none;
   }
+  .visible {
+    visibility: visible;
+  }
   .absolute {
     position: absolute;
   }
@@ -199,6 +203,9 @@
   }
   .relative {
     position: relative;
+  }
+  .static {
+    position: static;
   }
   .inset-0 {
     inset: calc(var(--spacing) * 0);
@@ -248,6 +255,9 @@
   .flex {
     display: flex;
   }
+  .hidden {
+    display: none;
+  }
   .h-3\/4 {
     height: calc(3/4 * 100%);
   }
@@ -275,14 +285,14 @@
   .max-h-0 {
     max-height: calc(var(--spacing) * 0);
   }
-  .max-h-200 {
-    max-height: calc(var(--spacing) * 200);
-  }
   .max-h-500 {
     max-height: calc(var(--spacing) * 500);
   }
   .max-h-2000 {
     max-height: calc(var(--spacing) * 2000);
+  }
+  .min-h-10 {
+    min-height: calc(var(--spacing) * 10);
   }
   .min-h-20 {
     min-height: calc(var(--spacing) * 20);
@@ -348,6 +358,14 @@
     --tw-scale-x: 100%;
     --tw-scale-y: 100%;
     --tw-scale-z: 100%;
+    scale: var(--tw-scale-x) var(--tw-scale-y);
+  }
+  .scale-y-0 {
+    --tw-scale-y: 0%;
+    scale: var(--tw-scale-x) var(--tw-scale-y);
+  }
+  .scale-y-100 {
+    --tw-scale-y: 100%;
     scale: var(--tw-scale-x) var(--tw-scale-y);
   }
   .rotate-0 {
@@ -443,6 +461,15 @@
   }
   .bg-modal-input-bg {
     background-color: var(--color-modal-input-bg);
+  }
+  .bg-orange-700 {
+    background-color: var(--color-orange-700);
+  }
+  .bg-orange-700\/30 {
+    background-color: color-mix(in srgb, oklch(55.3% 0.195 38.402) 30%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-orange-700) 30%, transparent);
+    }
   }
   .object-cover {
     object-fit: cover;
@@ -583,6 +610,14 @@
   .duration-500 {
     --tw-duration: 500ms;
     transition-duration: 500ms;
+  }
+  .duration-1000 {
+    --tw-duration: 1000ms;
+    transition-duration: 1000ms;
+  }
+  .duration-5000 {
+    --tw-duration: 5000ms;
+    transition-duration: 5000ms;
   }
   .ease-in {
     --tw-ease: var(--ease-in);
