--- a/react-frontend/src/output.css
+++ b/react-frontend/src/output.css
@@ -7,6 +7,10 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-amber-700: oklch(55.5% 0.163 48.998);
+    --color-yellow-50: oklch(98.7% 0.026 102.212);
+    --color-green-800: oklch(44.8% 0.119 151.328);
+    --color-gray-100: oklch(96.7% 0.003 264.542);
     --color-black: #000;
     --spacing: 0.25rem;
     --container-md: 28rem;
@@ -233,6 +237,15 @@
   .mb-10 {
     margin-bottom: calc(var(--spacing) * 10);
   }
+  .mb-20 {
+    margin-bottom: calc(var(--spacing) * 20);
+  }
+  .mb-40 {
+    margin-bottom: calc(var(--spacing) * 40);
+  }
+  .mb-60 {
+    margin-bottom: calc(var(--spacing) * 60);
+  }
   .mb-auto {
     margin-bottom: auto;
   }
@@ -275,11 +288,8 @@
   .max-h-0 {
     max-height: calc(var(--spacing) * 0);
   }
-  .max-h-200 {
-    max-height: calc(var(--spacing) * 200);
-  }
-  .max-h-500 {
-    max-height: calc(var(--spacing) * 500);
+  .max-h-100 {
+    max-height: calc(var(--spacing) * 100);
   }
   .max-h-2000 {
     max-height: calc(var(--spacing) * 2000);
@@ -302,11 +312,35 @@
   .w-8\/10 {
     width: calc(8/10 * 100%);
   }
+  .w-8\/11 {
+    width: calc(8/11 * 100%);
+  }
+  .w-8\/12 {
+    width: calc(8/12 * 100%);
+  }
   .w-9\/10 {
     width: calc(9/10 * 100%);
   }
+  .w-9\/11 {
+    width: calc(9/11 * 100%);
+  }
+  .w-9\/12 {
+    width: calc(9/12 * 100%);
+  }
   .w-15 {
     width: calc(var(--spacing) * 15);
+  }
+  .w-18\/25 {
+    width: calc(18/25 * 100%);
+  }
+  .w-19\/25 {
+    width: calc(19/25 * 100%);
+  }
+  .w-20\/25 {
+    width: calc(20/25 * 100%);
+  }
+  .w-\[0\.72\%\] {
+    width: 0.72%;
   }
   .w-full {
     width: 100%;
@@ -386,11 +420,20 @@
   .items-center {
     align-items: center;
   }
+  .items-start {
+    align-items: flex-start;
+  }
   .justify-center {
     justify-content: center;
   }
   .justify-evenly {
     justify-content: space-evenly;
+  }
+  .justify-start {
+    justify-content: flex-start;
+  }
+  .justify-items-start {
+    justify-items: start;
   }
   .overflow-auto {
     overflow: auto;
@@ -398,8 +441,8 @@
   .overflow-hidden {
     overflow: hidden;
   }
-  .overflow-y-auto {
-    overflow-y: auto;
+  .overflow-y-hidden {
+    overflow-y: hidden;
   }
   .rounded-md {
     border-radius: var(--radius-md);
@@ -432,6 +475,9 @@
   .border-accent-lm {
     border-color: var(--color-accent-lm);
   }
+  .bg-amber-700 {
+    background-color: var(--color-amber-700);
+  }
   .bg-bg-lm {
     background-color: var(--color-bg-lm);
   }
@@ -441,8 +487,20 @@
       background-color: color-mix(in oklab, var(--color-black) 50%, transparent);
     }
   }
+  .bg-gray-100 {
+    background-color: var(--color-gray-100);
+  }
+  .bg-green-800\/25 {
+    background-color: color-mix(in srgb, oklch(44.8% 0.119 151.328) 25%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-green-800) 25%, transparent);
+    }
+  }
   .bg-modal-input-bg {
     background-color: var(--color-modal-input-bg);
+  }
+  .bg-yellow-50 {
+    background-color: var(--color-yellow-50);
   }
   .object-cover {
     object-fit: cover;
@@ -452,6 +510,12 @@
   }
   .p-4 {
     padding: calc(var(--spacing) * 4);
+  }
+  .px-10 {
+    padding-inline: calc(var(--spacing) * 10);
+  }
+  .py-5 {
+    padding-block: calc(var(--spacing) * 5);
   }
   .pt-2 {
     padding-top: calc(var(--spacing) * 2);
@@ -488,6 +552,12 @@
   }
   .pb-10 {
     padding-bottom: calc(var(--spacing) * 10);
+  }
+  .pb-20 {
+    padding-bottom: calc(var(--spacing) * 20);
+  }
+  .pb-50 {
+    padding-bottom: calc(var(--spacing) * 50);
   }
   .pl-2 {
     padding-left: calc(var(--spacing) * 2);
@@ -534,6 +604,9 @@
     --tw-font-weight: var(--font-weight-medium);
     font-weight: var(--font-weight-medium);
   }
+  .break-words {
+    overflow-wrap: break-word;
+  }
   .break-all {
     word-break: break-all;
   }
@@ -558,9 +631,18 @@
   .opacity-100 {
     opacity: 100%;
   }
+  .shadow {
+    --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
   .shadow-xl {
     --tw-shadow: 0 20px 25px -5px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 8px 10px -6px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .transition {
+    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, visibility, content-visibility, overlay, pointer-events;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
   .transition-\[max-height\] {
     transition-property: max-height;
