added hella animations, very smooth now

--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -39,3 +39,8 @@ body,
 #root {
   height: 100%;
 }
+
+#root {
+  overflow-y: scroll;
+  scrollbar-color: var(--color-accent-lm) var(--color-bg-lm);
+}
