--- a/react-frontend/src/output.css
+++ b/react-frontend/src/output.css
@@ -7,10 +7,6 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-amber-700: oklch(55.5% 0.163 48.998);
-    --color-yellow-50: oklch(98.7% 0.026 102.212);
-    --color-green-800: oklch(44.8% 0.119 151.328);
-    --color-gray-100: oklch(96.7% 0.003 264.542);
     --color-black: #000;
     --spacing: 0.25rem;
     --container-md: 28rem;
@@ -234,18 +230,6 @@
   .mb-5 {
     margin-bottom: calc(var(--spacing) * 5);
   }
-  .mb-10 {
-    margin-bottom: calc(var(--spacing) * 10);
-  }
-  .mb-20 {
-    margin-bottom: calc(var(--spacing) * 20);
-  }
-  .mb-40 {
-    margin-bottom: calc(var(--spacing) * 40);
-  }
-  .mb-60 {
-    margin-bottom: calc(var(--spacing) * 60);
-  }
   .mb-auto {
     margin-bottom: auto;
   }
@@ -260,6 +244,9 @@
   }
   .flex {
     display: flex;
+  }
+  .hidden {
+    display: none;
   }
   .h-3\/4 {
     height: calc(3/4 * 100%);
@@ -312,35 +299,11 @@
   .w-8\/10 {
     width: calc(8/10 * 100%);
   }
-  .w-8\/11 {
-    width: calc(8/11 * 100%);
-  }
-  .w-8\/12 {
-    width: calc(8/12 * 100%);
-  }
-  .w-9\/10 {
-    width: calc(9/10 * 100%);
-  }
-  .w-9\/11 {
-    width: calc(9/11 * 100%);
-  }
-  .w-9\/12 {
-    width: calc(9/12 * 100%);
-  }
   .w-15 {
     width: calc(var(--spacing) * 15);
   }
   .w-18\/25 {
     width: calc(18/25 * 100%);
-  }
-  .w-19\/25 {
-    width: calc(19/25 * 100%);
-  }
-  .w-20\/25 {
-    width: calc(20/25 * 100%);
-  }
-  .w-\[0\.72\%\] {
-    width: 0.72%;
   }
   .w-full {
     width: 100%;
@@ -420,9 +383,6 @@
   .items-center {
     align-items: center;
   }
-  .items-start {
-    align-items: flex-start;
-  }
   .justify-center {
     justify-content: center;
   }
@@ -431,9 +391,6 @@
   }
   .justify-start {
     justify-content: flex-start;
-  }
-  .justify-items-start {
-    justify-items: start;
   }
   .overflow-auto {
     overflow: auto;
@@ -475,9 +432,6 @@
   .border-accent-lm {
     border-color: var(--color-accent-lm);
   }
-  .bg-amber-700 {
-    background-color: var(--color-amber-700);
-  }
   .bg-bg-lm {
     background-color: var(--color-bg-lm);
   }
@@ -487,20 +441,8 @@
       background-color: color-mix(in oklab, var(--color-black) 50%, transparent);
     }
   }
-  .bg-gray-100 {
-    background-color: var(--color-gray-100);
-  }
-  .bg-green-800\/25 {
-    background-color: color-mix(in srgb, oklch(44.8% 0.119 151.328) 25%, transparent);
-    @supports (color: color-mix(in lab, red, red)) {
-      background-color: color-mix(in oklab, var(--color-green-800) 25%, transparent);
-    }
-  }
   .bg-modal-input-bg {
     background-color: var(--color-modal-input-bg);
-  }
-  .bg-yellow-50 {
-    background-color: var(--color-yellow-50);
   }
   .object-cover {
     object-fit: cover;
@@ -510,12 +452,6 @@
   }
   .p-4 {
     padding: calc(var(--spacing) * 4);
-  }
-  .px-10 {
-    padding-inline: calc(var(--spacing) * 10);
-  }
-  .py-5 {
-    padding-block: calc(var(--spacing) * 5);
   }
   .pt-2 {
     padding-top: calc(var(--spacing) * 2);
@@ -552,9 +488,6 @@
   }
   .pb-10 {
     padding-bottom: calc(var(--spacing) * 10);
-  }
-  .pb-20 {
-    padding-bottom: calc(var(--spacing) * 20);
   }
   .pb-50 {
     padding-bottom: calc(var(--spacing) * 50);
@@ -604,9 +537,6 @@
     --tw-font-weight: var(--font-weight-medium);
     font-weight: var(--font-weight-medium);
   }
-  .break-words {
-    overflow-wrap: break-word;
-  }
   .break-all {
     word-break: break-all;
   }
@@ -631,10 +561,6 @@
   .opacity-100 {
     opacity: 100%;
   }
-  .shadow {
-    --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
   .shadow-xl {
     --tw-shadow: 0 20px 25px -5px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 8px 10px -6px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -653,6 +579,10 @@
     transition-property: all;
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
+  }
+  .duration-100 {
+    --tw-duration: 100ms;
+    transition-duration: 100ms;
   }
   .duration-200 {
     --tw-duration: 200ms;
@@ -765,6 +695,10 @@
 }
 html, body, #root {
   height: 100%;
+}
+#root {
+  overflow-y: scroll;
+  scrollbar-color: var(--color-accent-lm) var(--color-bg-lm);
 }
 @property --tw-scale-x {
   syntax: "*";
